# jizhanggongju

./: .gitignore  LICENSE  Procfile  README.md  _routes.json  index.py  manifest.json  minimal.py  pyproject.toml  render.yaml  requirements.txt  run.py  start.bat  wrangler.toml
.github/workflows/: deploy.yml
backend/: .env.example  _chkdb.py  _test_register.py  app.py  config.py  init_db.py  init_schema.sql  requirements.txt
backend/data/: _cleanup_tmp.py  mock_data.py
backend/db/: __init__.py  d1_adapter.py  postgres_adapter.py  sqlite_adapter.py
backend/routes/: admin.py  auth.py  dashboard.py  io.py  reminders.py  stats.py  transactions.py
backend/services/: __init__.py  auth_service.py  io_service.py  reminder_service.py  stats_service.py  transaction_service.py
backend/utils/: __init__.py  captcha_helper.py  decorators.py  validators.py
css/: style.css
frontend/: _routes.json  index.html
frontend/css/: style.css
frontend/functions/: [path].js
frontend/functions/api/auth/: register.js
frontend/images/: README-放图说明.txt
frontend/js/: api.js  login.js  router.js
frontend/js/modules/: bills.js  stats.js
functions/: [path].js  _middleware.js
functions/api/: [[path]].js  _utils.js
functions/api/auth/: captcha.js  login.js
js/: api.js  dashboard.js  login.js
js/modules/: admin.js  reminders.js  reports.js  settings.js
