[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jizhang-system"
version = "1.0.0"
description = "智能记账 / 房东收租管理系统"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "werkzeug>=3.0.1",
    "PyJWT>=2.8.0,<3.0.0",
]

[tool.setuptools]
packages = ["backend", "backend.db", "backend.services", "backend.routes", "backend.utils", "backend.data"]
py-modules = ["index"]